finish the connection with the client and multiple server in several ports